# book-catalog

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/migrations/: env.py
src/migrations/versions/: 20bd0c9dc50d_book_catalog_models.py
src/models/: __init__.py  author.py  book.py  publisher.py
